--- a/Frontend/src/component/CardProfil/CardProfil.css
+++ b/Frontend/src/component/CardProfil/CardProfil.css
@@ -5,7 +5,8 @@
     margin: 20px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
-    padding: 5px;
+    padding: 0 15px;
+    display: flex;
 }
 
 #Card:hover {
@@ -21,11 +22,20 @@
     border-radius: 50%;
 }
 
+#CardContent h5, #CardContent h6 {
+    margin: 5px 0;
+}
+
+.columnCheck {
+    margin: 10px 0;
+}
+
 #ViewProfilBtn {
     padding: 10px;
-    margin: 20px 15px;
+    margin: 10px 0px;
     background: lightblue;
     border-radius: 5px;
     border: lightblue;
     text-align: center;
+    font-size: 8px;
 }
